# terminaide

./: .dockerignore  .ebignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  Makefile.issue-manager  README.md  docker-compose.yml  play.py  pyproject.toml  tasks.yaml  test.py  test_curses_epititle.py  test_curses_hyperlink.py  test_mixed_routes.py  test_server.py
.github/: dependabot.yml
.github/workflows/: auto-assign.yml  publish.yml  triage.yml
demo/: apps.py  client.py  container.py  function.py  instructions.py  script.py  serve.py  server.py
example/: client.py  server.py
examples/: apps.py  arcade.py  container.py  function.py  script.py
protottyde/: __init__.py  exceptions.py  installer.py  serve.py
protottyde/core/: manager.py  proxy.py  settings.py
protottyde/templates/: terminal.html
terminaide/: __init__.py  cursor_manager.py  default_client.py  exceptions.py  serve.py  termin_api.py
terminaide/core/: app_config.py  app_factory.py  app_runner.py  app_wrappers.py  ascii_utils.py  auto_index.py  config.py  cursor.py  cursor_manager.py  data_models.py  default_client.py  dynamic_wrapper.py  exceptions.py  factory.py  index.py  index_api.py  index_auto.py  index_base.py  index_curses.py  index_html.py  index_page.py  installer.py  log_config.py  logger.py  manager.py  models.py  monitor.py  proxy.py  server.py  settings.py  termin_ascii.py  terminal.py  terminascii.py  ttyd.py  ttyd_cursor.py  ttyd_installer.py  ttyd_manager.py  ttyd_proxy.py  utils.py  venv_utils.py  (+1 more)
terminaide/core/ttyd_bin/: ttyd
terminaide/demos/: __init__.py  client.py  index.py  instructions.py  pong.py  snake.py  tetris.py
terminaide/games/: __init__.py  asteroids.py
terminaide/templates/: index.html  terminal.html
terminaide/terminarcade/: __init__.py  asteroids.py  index.py  instructions.py  pong.py  snake.py  tetris.py
terminarcade/: __init__.py  client.py  index.py  instructions.py  server.py
test/: client.py  server.py
test-server/: main.py
test-server/client/: main.py
test-server/modules/: __init__.py  proxy.py  ttyd_manager.py
test-server/templates/: index.html
tests/: client.py  client_1.py  client_2.py  container.py  multi_server.py  server.py  test_apps_server.py  test_demos.py  test_dynamic_args.py  test_validator.py
tools/: Makefile.issue-manager  Makefile.pypi-publisher  issue_manager.py  issues.py  publisher.py  task_runner.py  tasks.py
tryit/: apps.py  container.py  demo.py  function.py  script.py
utilities/: issues.py  release.py
