[tool.poetry]
name = "terminaide"
version = "0.0.3"
description = "Serve Python CLI applications in the browser using ttyd"
repository = "https://github.com/anotherbazeinthewall/terminaide"
authors = ["Alex Basile <basileaw@gmail.com>"]
packages = [{ include = "terminaide" }]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.104.0"
jinja2 = ">=3.1.2"
httpx = ">=0.25.0"
websockets = ">=12.0"
pydantic = ">=2.4.2"
readchar = "^4.2.1"
uvicorn = ">=0.24.0"

[tool.poetry.group.dev.dependencies]
docker = "^7.1.0"
poethepoet = "^0.33.0"

[tool.poe.tasks]
serve = { cmd = "python tests/server.py", help = "Run the server in default mode" }
serve-single = { cmd = "python tests/server.py --mode single", help = "Run in single mode" }
serve-multi = { cmd = "python tests/server.py --mode multi", help = "Run in multi mode" }
serve-container = { cmd = "python tests/container.py", help = "Run in container mode" }

[tool.poe.tasks.release]
args = ["type"]
help = "Release a new version (patch/minor/major)"
sequence = [
  { cmd = "poetry version ${type}" },
  { cmd = "git add pyproject.toml" },
  { shell = """
      VERSION=$(poetry version -s)
      git commit -m "release $VERSION"
      git tag v$VERSION
      git push && git push --tags
    """ },
]
